refactor to clean code